# SparseBitset

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  bitset_module.c  run_flow_tests.sh  run_in_docker.sh  test_bitset.sh
.zencoder/rules/: repo.md
VEB/: CMakeLists.txt  Makefile  VebTree.h  VebTree.hpp  VebTree_c_api.cpp  veb_c_test.c
VEB/allocator/: allocate_unique.hpp
include/: vebitset.h
pack/: ramp.yml
src/: bitset_module.c  vebitset.cpp
src/VEB/: CMakeLists.txt  Makefile  VebCommon.hpp  VebTree.h  VebTree.hpp  VebTree_c_api.cpp  node16.hpp  node32.hpp  node64.hpp  node8.hpp
src/VEB/allocator/: allocate_unique.hpp  tracking_allocator.hpp
tests/: CMakeLists.txt  Makefile  README.md
tests/benchmarks/: CMakeLists.txt  bench-res.md  bench_macro.cpp  bench_main.cpp  bench_roaring_micro.cpp  bench_veb_micro.cpp  bench_vector_bool_micro.cpp  benchmark.hpp  generate_data.py  run_benchmarks.py
tests/flow/: test_basic_mutations.py  test_cluster_compaction.py  test_complex_ops.py  test_count_range.py  test_fuzz.py  test_implementation_variants.py  test_info_command.py  test_invalid_input.py  test_large_values.py  test_membership_size.py  test_min_max.py  test_module_load.py  test_node16_set_edge_cases.py  test_node32_and_decompact.py  test_node32_compaction.py  test_node32_set_edge_cases.py  test_persistence_rdb.py  test_set_operations.py  test_successor_predecessor.py  test_toarray_order.py
tests/unit/: test_basics.cpp  test_compacted_nodes.cpp  test_complex_scenarios.cpp  test_count_range.cpp  test_edge_cases.cpp  test_fuzz.cpp  test_memory.cpp  test_node16_32_setops.cpp  test_node_transitions.cpp  test_ordering.cpp  test_queries.cpp  test_serialization.cpp  test_set_operations.cpp
